# PhysiGym

./: .gitignore  LICENSE  PHYSICELL  README.md  VERSION.txt  capture_physigym.py  example.py  install.sh  install_physigym.py  install_rl_folder.py  recall_physigym.py  sac_lighter_version_complex_tme_easier.py  test_env.py
.github/todo/: apple.yml  windows.yml
.github/workflows/: apple.yml  linux.yml  linux_segmentation_fault.yml  windows.yml
man/: HOWTO_physicell.md  HOWTO_physigym.md  HOWTO_purge.md  ModelPhysiCellEnv_struct.md  REFERENCE.md  TUTORIAL_phsigym_and_reinforcementlearning.md  TUTORIAL_physigym.md  TUTORIAL_physigym_model.md  TUTORIAL_physigym_rl.md  TUTORIAL_physigym_rl_2.md  TUTORIAL_physigym_rl_tib.md  physicell_install_apple.md  physicell_install_linux.md  physicell_install_windows.md  scarab.py
man/docstring/: env.__init__.md  env.close.md  env.get_action_space.md  env.get_img.md  env.get_info.md  env.get_observation.md  env.get_observation_space.md  env.get_reward.md  env.get_terminated.md  env.get_truncated.md  env.render.md  env.reset.md  env.step.md  env.verbose_false.md  env.verbose_true.md  physicell.get_cell.md  physicell.get_microenv.md  physicell.get_parameter.md  physicell.get_variable.md  physicell.get_vector.md  physicell.reset.md  physicell.restart.md  physicell.set_parameter.md  physicell.set_variable.md  physicell.set_vector.md  physicell.start.md  physicell.step.md  physicell.stop.md  (+17 more)
physigym/: Makefile  VERSION.txt  main.cpp
physigym/custom_modules/embedding/: VERSION.txt  physicellmodule.cpp  pyproject.toml  setup.py
physigym/custom_modules/embedding/BioFVM/: BioFVM_MultiCellDS.cpp  BioFVM_MultiCellDS.h  BioFVM_basic_agent.cpp  BioFVM_basic_agent.h  BioFVM_microenvironment.cpp  BioFVM_microenvironment.h  BioFVM_vector.cpp
physigym/custom_modules/embedding/core/: PhysiCell_cell.cpp  PhysiCell_cell.h  PhysiCell_standard_models.cpp
physigym/custom_modules/embedding/modules/: PhysiCell_MultiCellDS.cpp  PhysiCell_settings.cpp  PhysiCell_settings.h
physigym/custom_modules/lyceum/: __init__.py  pyproject.toml  setup.py
physigym/custom_modules/lyceum/physigym/envs/: core_physicell_gym_env.py  physicell_core.py
physigym/custom_modules/physigym/: VERSION.txt  pyproject.toml  requirements.txt
physigym/custom_modules/physigym/physigym/: VERSION.txt  __init__.py
physigym/custom_modules/physigym/physigym/agents/: ddpg_torch.py  dqn_torch.py  td3_torch.py
physigym/custom_modules/physigym/physigym/envs/: __init__.py  physicell_core.py  physicell_model.py
rl/: c51.py  launch_sac.sh  launch_sac_complex_tme.sh  launch_sac_tme.sh  launch_tdmpc2.sh  plan.md  requirements.txt  sac.py  sac_complex_tme.py  sac_complex_tme_easier.py  sac_tme_model.py  sac_tumor_immune_base.py  tdmpc2_tme_model.py
test/: all_tutorial.py  all_unittest.py  check_for_drift.py  debug_test.py  icebreaker.py  install_tutorial.py  install_unittest.py  physigym_drift_ice.py  tall_physigym.py  test_episode.py  test_epoch.py  test_install.py  test_physigym.py  test_physigym_model.py  test_physigym_reload.py  test_tutorial.py  test_uninstall.py  test_unittest.py  tinstall_physigym.py  tuninstall_physigym.py  uninstall_unittest.py
test_segmenation_fault/: README.md  error_segmentation_fault.md  physicell_model.py  test_env.py
(+189 files in other folders)
